@@ -1,3 +1,8 @@
+2004-05-11  Al Riddoch  <alriddoch@zepler.org>
+
+	* Atlas/Objects/GenerateObjectFactory.py: Modify factory so behavoir
+	  for unknown objects is less confusing.
+
 2004-05-07  Al Riddoch  <alriddoch@zepler.org>
 
 	* Atlas/Objects/objectFactory.h: Remove redundant include.
